--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -14,13 +14,12 @@
                     <input name="min" type="number"/> - <input name="max" type="number"/>
                 </div>
             </div>
-	    <div class="sensibility control-group clearfix">
-	        <label>Sensibility</label>
+            <div class="sensibility control-group clearfix">
+                <label>Sensibility</label>
                 <div class="mod-controls mod-range">
-                    <select name="steps">
-		    </select>
+                    <select name="steps"></select>
                 </div>
-	    </div>
+            </div>
             <div class="mod control-group clearfix">
                 <label>MOD</label>
                 <div class="mod-controls">
@@ -28,8 +27,8 @@
                 </div>
             </div>
             <div class="textright clearfix">
-              <span class="btn btn-danger js-close">Cancel</span>
-              <span class="btn btn-success js-save">Save</span>
+                <span class="btn btn-danger js-close">Cancel</span>
+                <span class="btn btn-success js-save">Save</span>
             </div>
         </form>
     </div>
