--- a/html/include/bank_pedalboard.html
+++ b/html/include/bank_pedalboard.html
@@ -5,15 +5,13 @@
             <span class="js-remove hidden alignright btn btn-mini btn-danger">Remove</span>
         </div>
         <div class="img">
-            {{#thumbnail}}
-            <img src="{{thumbnail}}?tstamp={{tstamp}}" />
-            {{/thumbnail}}
+            <img src="{{image}}"/>
         </div>
-	<div class="addressings">
-	  <div class="footswitch{{#footswitches.0}} addressed{{/footswitches.0}}"></div>
-	  <div class="footswitch{{#footswitches.1}} addressed{{/footswitches.1}}"></div>
-	  <div class="footswitch{{#footswitches.2}} addressed{{/footswitches.2}}"></div>
-	  <div class="footswitch{{#footswitches.3}} addressed{{/footswitches.3}}"></div>
-	</div>
+        <div class="addressings">
+            <div class="footswitch{{#footswitches.0}} addressed{{/footswitches.0}}"></div>
+            <div class="footswitch{{#footswitches.1}} addressed{{/footswitches.1}}"></div>
+            <div class="footswitch{{#footswitches.2}} addressed{{/footswitches.2}}"></div>
+            <div class="footswitch{{#footswitches.3}} addressed{{/footswitches.3}}"></div>
+        </div>
     </div>
 </div>
