--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -8,7 +8,13 @@
     z-index:100;
 }
 #pedalboard-dashboard > .mod-pedal > div:first-child {
-    box-shadow: 8px 24px 50px rgba(0, 0, 0, 0.66), 5px 15px 30px rgba(0, 0, 0, 0.9), 0px 2px 5px black;
+    box-shadow:  2px  8px  7px rgba(0,0,0,0.2),
+                 4px 16px  7px rgba(0,0,0,0.2),
+                 6px 24px  7px rgba(0,0,0,0.2),
+                 8px 32px  7px rgba(0,0,0,0.2),
+                10px 40px  7px rgba(0,0,0,0.2),
+                 5px 20px 50px rgba(0,0,0,0.9),
+                 4px 12px 30px rgba(0,0,0,0.5);
 }
 .mod-input .mod-output-jack{
     z-index: 100;
