fixed register link, now opening in new window

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -12,7 +12,9 @@ body {
 * {
   font-family: "cooper hewitt", Sans-serif !important;
 }
-
+.form-control {
+  width: 100% !important;
+}
 #wrapper {
   bottom: 0;
   left: 0;
