Display CPU load in text

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -48,7 +48,7 @@ body {
     background-color:rgba(0,0,0,0.3);
     height:90%;
     margin:1px;
-}   
+}
 
 /* = MAIN MENU (FOOTER)
 ================================================ */
@@ -80,7 +80,7 @@ body {
 
 #main-menu > div.icon.selected {
     background:#000;
-} 
+}
 
 #main-menu > div.icon > a {
     display:block;
@@ -230,6 +230,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     margin: 0;
     margin-left: 1em;
     color: white;
+    font-size:13px;
 }
 /* MOD - Bluetooth */
 #main-menu #mod-bluetooth {
@@ -284,11 +285,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     border-left:9px solid transparent;
     border-right:9px solid transparent;
     border-top:9px solid white;
-    height:0; 
+    height:0;
     position:absolute;
     bottom:-18px;
     right:14px;
-    width:0; 
+    width:0;
 }
 
 
@@ -339,7 +340,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     height:26px;
 }
 #plugins-library .fold,
-#plugins-library .folded { 
+#plugins-library .folded {
     cursor:pointer;
     display:block;
     float:right;
@@ -551,7 +552,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     line-height:1.25;
 }
 /* Effect Rating */
-#plugins-library #plugins-list .plugins-wrapper .plugin .rating { 
+#plugins-library #plugins-list .plugins-wrapper .plugin .rating {
     background-image:url(../img/icn-rating.png);
     background-position:center top;
     background-repeat:no-repeat;
