--- a/html/css/less/social.less
+++ b/html/css/less/social.less
@@ -1,84 +1,5 @@
-/**
- * This is the main application stylesheet. It should include or import all
- * stylesheets used throughout the application as this is the only stylesheet in
- * the Grunt configuration that is automatically processed.
- */
-
-
-/**
- * First, we include the Twitter Bootstrap LESS files. Only the ones used in the
- * project should be imported as the rest are just wasting space.
- */
-//@import '../assets/social-icons/css/social.css';
-@import 'node_modules/bootstrap/less/bootstrap.less';
-
-
-/**
- * This is our main variables file. We must include it last so we can overwrite any variable
- * definitions in our imported stylesheets.
- */
-
-@import 'variables.less';
-
-/**
- * Typography
- */
-
-@font-face {
-    font-family: 'cooper hewitt';
-    src: url('../fonts/cooper/cooperhewitt-semibold-webfont.eot');
-    src: url('../fonts/cooper/cooperhewitt-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/cooper/cooperhewitt-semibold-webfont.woff2') format('woff2'),
-         url('../fonts/cooper/cooperhewitt-semibold-webfont.woff') format('woff'),
-         url('../fonts/cooper/cooperhewitt-semibold-webfont.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'cooper hewitt';
-    src: url('../fonts/cooper/cooperhewitt-light-webfont.eot');
-    src: url('../fonts/cooper/cooperhewitt-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/cooper/cooperhewitt-light-webfont.woff2') format('woff2'),
-         url('../fonts/cooper/cooperhewitt-light-webfont.woff') format('woff'),
-         url('../fonts/cooper/cooperhewitt-light-webfont.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'cooper hewitt';
-    src: url('../fonts/cooper/cooperhewitt-lightitalic-webfont.eot');
-    src: url('../fonts/cooper/cooperhewitt-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/cooper/cooperhewitt-lightitalic-webfont.woff2') format('woff2'),
-         url('../fonts/cooper/cooperhewitt-lightitalic-webfont.woff') format('woff'),
-         url('../fonts/cooper/cooperhewitt-lightitalic-webfont.ttf') format('truetype');
-    font-weight: 300;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'cooper hewitt';
-    src: url('../fonts/cooper/cooperhewitt-bookitalic-webfont.eot');
-    src: url('../fonts/cooper/cooperhewitt-bookitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/cooper/cooperhewitt-bookitalic-webfont.woff2') format('woff2'),
-         url('../fonts/cooper/cooperhewitt-bookitalic-webfont.woff') format('woff'),
-         url('../fonts/cooper/cooperhewitt-bookitalic-webfont.ttf') format('truetype');
-    font-weight: 400;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'cooper hewitt';
-    src: url('../fonts/cooper/cooperhewitt-book-webfont.eot');
-    src: url('../fonts/cooper/cooperhewitt-book-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/cooper/cooperhewitt-book-webfont.woff2') format('woff2'),
-         url('../fonts/cooper/cooperhewitt-book-webfont.woff') format('woff'),
-         url('../fonts/cooper/cooperhewitt-book-webfont.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-* {
-  outline: 0 !important
-}
 #mod-social-network { 
-  background: url('../img/social/back.png') repeat fixed;
+  background: url(@wallpaper) repeat fixed;
   bottom: 45px;
   top: 0;
   font-size: 15px !important;
