--- a/html/css/less/variables.less
+++ b/html/css/less/variables.less
@@ -31,6 +31,9 @@
 //** Link hover color set via `darken()` function.
 @link-hover-color:      darken(@link-color, 15%);
 
+//Background wallpaper
+
+@wallpaper: '../img/social/back.png';
 
 //== Typography
 //
