redesigning plugin store

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,12 +1,12 @@
 <div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-plugin-id="{{id}}">
-    <div class="thumb">
-        <img src="{{thumbnail_href}}">
-    </div>
-    <div class="description">
-        <span class="title">{{label}}</span>
-        <span class="author">{{brand}}</span>
-        <span class="status {{status}}"></span>
-    </div>
+    <figure class="thumb">
+        <img src="img/px.gif" style="background: url({{thumbnail_href}}) center center no-repeat;">
+        <figcaption class="description">
+            <span class="title">{{label}}</span>
+            <span class="author">{{brand}}</span>
+            <span class="status {{status}}"></span>
+        </figcaption>
+    </figure>
     <!--
     <span class="rating four"></span>
     <span class="downloads">{{downloads}}</span>
