changing plugin store layout before merging

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,12 +1,16 @@
 <div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-plugin-id="{{id}}">
     <figure class="thumb">
-        <img src="img/px.gif" style="background: url({{thumbnail_href}}) center center no-repeat;">
-        <figcaption class="description">
+        <img src="img/px.gif" style="background: url({{screenshot_href}}) center center no-repeat;">
+        <figcaption>
             <span class="title">{{label}}</span>
             <span class="author">{{brand}}</span>
             <span class="status {{status}}"></span>
         </figcaption>
     </figure>
+    <div class="description">    
+        <p>Tracing the stages of a typical tube amplifier circuit, this plugin aims to recreate those features of traditional guitar amplification electronics that have proved musically useful, and to provide them with the most musical rather than the most authentic ranges of adjustment and character.  CabinetIV provides matching recreations of loudspeaker cabinets.</p>
+    </div>
+
     <!--
     <span class="rating four"></span>
     <span class="downloads">{{downloads}}</span>
