--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -45,20 +45,12 @@
     border-style: dotted;
     border-width: 0 1px 0 0;
     bottom: 46px;
-    left: 0;
+    left: 10px;
     padding-top: 18px;
-    position: fixed !important;
+    position: fixed;
     right: 0;
-    top: 0;
-    h2 {
-    	font-size: 15px;
-	    text-transform: uppercase;
-	    display: block;
-	    clear: both;
-	    font-weight: bold;
-	    color: white;
-    }
-    .make-sm-column(2);
+    top: 68px;
+    width: 240px;
     overflow: hidden;
 	    .control-group {
 	      float: left;
@@ -100,94 +92,82 @@
 		  }
 	  }
 	}
-  .cloud-plugins {
-    .make-sm-column(10);
-    .make-sm-column-offset(2);
-    background: #222;
-     .cloud-plugin {
-      color: #fff;
-      .make-sm-column(2);
-      .make-xs-column(3);
-      padding: 15px;
-		     &:hover {
-		      background: #333;
-		      border-radius: 3px;
-		      cursor: pointer;
-		    }
-	     	figure {
-		      img {
-		      	width: 100%;
-		      	height: 74px;
-		      	background-size: contain !important;
-		      	margin-bottom: 10px;
-		      	outline: 1px solid #333 !important;
-		      	border: 5px solid transparent;
-		      }
-		     .title {
-		      display: block;
-		      height: 18px;
-		      text-transform: uppercase;
-		      font-weight: bold;
-		      overflow: hidden;
-		      position: relative;
-		    }
-		     .status {
-		      display: block;
-		      width: 50%;
-		      text-align: center;
-		      border-radius: 2px;
-		      text-transform: uppercase;
-		      font-weight: bold;
-		      font-size: 9px;
-		    }
-		     .status.installed {
-		      /*background-image: url(../img/icn-installed.png);
-		      background-position: center center;
-		      background-repeat: no-repeat;*/
-		      background-color: @brand-primary;
-		      &:before {
-		      	content: "installed";
-		      }
-		    }
-		     .status.outdated {
-		      /*background-image: url(../img/icn-outdated.png);
-		      background-position: center center;
-		      background-repeat: no-repeat;*/
-		      background-color: @brand-warning;
-		      &:before {
-		      	content: "update";
-		      }
-		    }
-		     .status.blocked {
-		      /*background-image: url(../img/icn-blocked.png);
-		      background-position: center center;
-		      background-repeat: no-repeat;*/
-		      background-color: @brand-danger;
-		      &:before {
-		      	content: "install";
-		      }
-		    }
-		     .description {
-		      display: block;
-		      font-size: 12px;
-		      height: 52px;
-		      line-height: 1.5;
-		      overflow: hidden;
-		    }
-		     .actions {
-		      font-size: 11px;
-		      font-weight: bold;
-		      text-transform: uppercase;
-		    }
-		     .actions > span {
-		      cursor: pointer;
-		    }
-		     .actions > span:hover {
-		      text-decoration: underline;
-		    }
-		     .actions span.duplicate {
-		      margin: 0 6px;
-		    }
-		  }
-	}
+	  .cloud-plugins {
+	    left: 252px;
+	    position: absolute;
+	    right: 10px;
+	     .cloud-plugin {
+	      color: #fff;
+	      background-color: #111;
+	      .make-sm-column(4);
+	      padding: 15px;
+			     &:hover {
+			      background-color: #212121;
+			      cursor: pointer;
+			    }
+		     	figure {
+		     		.make-sm-column(4);
+			      img {
+			      	max-height: 366px;
+			      	width: 100%;
+			      	background-size: contain !important;
+			      	margin-bottom: 10px;
+			      }
+			      figcaption {
+			      	 .title {
+			      	  display: block;
+			      	  height: 18px;
+			      	  text-transform: uppercase;
+			      	  font-weight: bold;
+			      	  overflow: hidden;
+			      	  position: relative;
+			      		}
+			      	 .status {
+			      	  display: block;
+			      	  width: 50%;
+			      	  text-align: center;
+			      	  border-radius: 2px;
+			      	  text-transform: uppercase;
+			      	  font-weight: bold;
+			      	  font-size: 9px;
+			      	}
+			      	 .status.installed {
+			      	  background-color: @brand-success;
+			      	  &:after {
+			      	  	content: "installed"
+			      	  }
+			      	}
+			      	 .status.outdated {
+			      	  background-color: @brand-warning
+			      	}
+			      	 .status.blocked {
+			      	  background-color: @brand-danger
+			      	}
+			      }
+			    }
+			    .description {
+			    	.make-sm-column(8);
+			     .description {
+			      display: block;
+			      font-size: 12px;
+			      height: 52px;
+			      line-height: 1.5;
+			      overflow: hidden;
+			    }
+			     .actions {
+			      font-size: 11px;
+			      font-weight: bold;
+			      text-transform: uppercase;
+			    }
+			     .actions > span {
+			      cursor: pointer;
+			    }
+			     .actions > span:hover {
+			      text-decoration: underline;
+			    }
+			     .actions span.duplicate {
+			      margin: 0 6px;
+			    }
+			  }
+		}
 }
