Work on install/remove/upgrade plugins; Auto-refresh plugin bar

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -16,9 +16,9 @@
                             <br/>
                             <span class="js-installed-version">Installed Version: <span class="bold">{{installed_version}}</span></span>
                             <br/>
-                            <button class="js-install btn btn-info btn-mini hidden">Install</button>
-                            <button class="js-upgrade btn btn-info btn-mini hidden">Upgrade</button>
-                            <button class="js-remove btn btn-danger btn-mini hidden">Remove</button>
+                            <button class="js-install btn btn-info btn-mini">Install</button>
+                            <button class="js-upgrade btn btn-info btn-mini">Upgrade</button>
+                            <button class="js-remove btn btn-danger btn-mini">Remove</button>
                         </p>
                     </header>
                     <p><a href="http://wiki.moddevices.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
