fixes for bootstrap notifications

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -116,6 +116,9 @@ body {
   z-index: 100000;
   > section {
     border-radius: 0;
+    margin-bottom: 0 !important;
+    opacity: 0.96 ;
+    cursor: pointer;
   }
   .progressbar {
     border: 1px solid rgba(0,0,0,0.3);
