--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -1,4 +1,4 @@
-<div class="plugin-info">
+<div class="js-close plugin-info">
     <div class="container-fluid box">
         <span class="js-close alignright btn btn-mini btn-danger">Close</span>
         <div class="row-fluid clearfix">
