--- a/html/include/plugin.html
+++ b/html/include/plugin.html
@@ -1,12 +1,7 @@
-<div class="plugin available-plugin js-available-effect" mod-role="available-plugin" mod-plugin-id="{{_id}}">
+<div class="plugin available-plugin js-available-effect" mod-role="available-plugin">
     <div class="thumb">
         <img src="{{thumbnail_href}}">
     </div>
     <span class="title">{{label}}</span>
     <span class="author">{{brand}}</span>
-    <span class="status {{status}}"></span>
-    <!--
-    <span class="rating four"></span>
-    <span class="downloads">{{downloads}}</span>
-    -->
 </div>
